# zenu-virtualconsole

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.engine  README.md
emulator/include/: apu.hpp  bus.hpp  cpu.hpp  gpu.hpp  loader.hpp
emulator/src/: apu.cpp  bus.cpp  cpu.cpp  gpu.cpp  loader.cpp  main.cpp
engine/include/: audio.hpp  font.hpp  gfx.hpp  input.hpp  math.hpp  types.hpp  zenu.hpp
engine/src/pc/: backend_pc.cpp
engine/src/zenu/: backend_zenu.cpp  font.cpp  startup.s
game/: scene_generated.hpp
game/analog_test/: main.cpp
game/pong/: main.cpp
game/sandgame/: main.cpp
game/tetris/: main.cpp  scene.json  scene_generated.hpp
game/zenu_doom/: main.cpp  scene_generated.hpp
game/zenu_horizon/: main.cpp  scene.json
roms/tetris/: Makefile
roms/tetris/src/: main.cpp
scripts/: assemble_3d.py  assemble_moving.py  assemble_test.py  make_boc.py  prepare_lle.py
sdk/: zenu.ld
sdk/include/: zenu.h
sdk/src/: crt0.s
studio/: editor.js  index.html  package-lock.json  server.js  style.css
